--- a/HTML/Module-3/Modul3Hw3.html
+++ b/HTML/Module-3/Modul3Hw3.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8">
   <title>Homework#3</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/header.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/footer.css">
+  <!-- <link rel="stylesheet" href="css/styles.css"> -->
+  <!-- <link rel="stylesheet" href="css/header.css"> -->
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
+  <!-- <link rel="stylesheet" href="css/footer.css"> -->
+  <link rel="stylesheet" href="css/base.css">
 </head>
 
 <body>
