--- a/HTML/Module-4/Modul4Hw4.html
+++ b/HTML/Module-4/Modul4Hw4.html
@@ -13,12 +13,10 @@
   <div class="wrapper">
     <header class="header clearfix">
       <h2 class="title">
-        <snap class="colortext">M</snap>art
+        <span class="colortext">M</span>art
       </h2>
       <ul class="menu">
-        <li class="menu-item"><a href="" class="menu-link">
-            <snap class="colortext">home</snap>
-          </a></li>
+        <li class="menu-item"><a href="" class="menu-link">home</a></li>
         <li class="menu-item"><a href="" class="menu-link">about us</a></li>
         <li class="menu-item"><a href="" class="menu-link">page</a></li>
         <li class="menu-item"><a href="" class="menu-link">shop</a></li>
@@ -27,93 +25,99 @@
       </ul>
     </header>
     <main class="content">
-      <h2 class="title-center">featured products</h2>
-      <p class="line-first"></p>
-      <div class="body-figure clearfix">
-        <figure class="figure">
-          <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">blue tshirt</p>
-            <p class="price">$26</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="https://i2.rozetka.ua/goods/6741509/49874254_images_6741509358.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">woman shirt</p>
-            <p class="price">$31</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="http://dasha46.narod.ru/Encyclopedic_Knowledge/General_Science/Clothes/Hats/shlyapa_muzhskaya.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">yellow tshirt</p>
-            <p class="price">$21</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="https://romastyle.ua/image/cache/catalog/rs-2121rozhevijlak-500x500.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">cool lingerie</p>
-            <p class="price">$56</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="https://romastyle.ua/image/cache/catalog/rs2110golubijbilijflotar2-380x380.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">blue tshirt</p>
-            <p class="price">$26</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="https://img.klubok.com/img/used/2018/05/07/17282/17282899_10.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">woman shirt</p>
-            <p class="price">31%</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="http://bashmak.com.ua/5338-large_default/%D1%82%D1%83%D1%84%D0%BB%D0%B8-%D0%BC%D1%83%D0%B6%D1%81%D0%BA%D0%B8%D0%B5-%D1%83-502%D0%BA.jpg"
-            alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">yellow tshirt</p>
-            <p class="price">$21</p>
-          </figcaption>
-        </figure>
-        <figure class="figure">
-          <img src="https://mnogo-brendov.ru/uploads/shop/products/main/ag89011-5.jpg" alt="" class="gallery-img">
-          <figcaption class="text">
-            <p class="worlds">cool lingerie</p>
-            <p class="price">$56</p>
-          </figcaption>
-        </figure>
-      </div>
-      <h2 class="title-center">latest news</h2>
-      <p class="line-second"></p>
-      <article class="article clearfix">
-        <img src="https://detector.media/doc/images/news/archive/2013/98412/ArticleImage_98412.jpg" alt="" class="article-img">
-        <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
-        <p class="line-third"></p>
-        <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum laboriosam
-          quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
-        <button class="button">Read More</button>
-      </article>
-      <article class="article clearfix">
-        <img src="https://football24.ua/resources/photos/news/660x364_DIR/201802/436816.jpg?201802082059" alt="" class="article-img">
-        <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
-        <p class="line-third"></p>
-        <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum laboriosam
-          quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
-        <button class="button">Read More</button>
-      </article>
-      <article class="article">
-        <img src="https://static.ukrinform.com/photos/2018_11/thumb_files/630_360_1541661516-941.jpg" alt="" class="article-img">
-        <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
-        <p class="line-third"></p>
-        <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum laboriosam
-          quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
-        <button class="button">Read More</button>
-      </article>
+      <section>
+        <h2 class="title-center">featured products</h2>
+        <div class="body-figure clearfix">
+          <figure class="figure">
+            <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">blue tshirt</p>
+              <p class="price">$26</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="https://i2.rozetka.ua/goods/6741509/49874254_images_6741509358.jpg" alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">woman shirt</p>
+              <p class="price">$31</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="http://dasha46.narod.ru/Encyclopedic_Knowledge/General_Science/Clothes/Hats/shlyapa_muzhskaya.jpg"
+              alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">yellow tshirt</p>
+              <p class="price">$21</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="https://romastyle.ua/image/cache/catalog/rs-2121rozhevijlak-500x500.jpg" alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">cool lingerie</p>
+              <p class="price">$56</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="https://romastyle.ua/image/cache/catalog/rs2110golubijbilijflotar2-380x380.jpg" alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">blue tshirt</p>
+              <p class="price">$26</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="https://img.klubok.com/img/used/2018/05/07/17282/17282899_10.jpg" alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">woman shirt</p>
+              <p class="price">$31</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="http://bashmak.com.ua/5338-large_default/%D1%82%D1%83%D1%84%D0%BB%D0%B8-%D0%BC%D1%83%D0%B6%D1%81%D0%BA%D0%B8%D0%B5-%D1%83-502%D0%BA.jpg"
+              alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">yellow tshirt</p>
+              <p class="price">$21</p>
+            </figcaption>
+          </figure>
+          <figure class="figure">
+            <img src="https://mnogo-brendov.ru/uploads/shop/products/main/ag89011-5.jpg" alt="" class="gallery-img">
+            <figcaption class="text clearfix">
+              <p class="worlds">cool lingerie</p>
+              <p class="price">$56</p>
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+      <section>
+        <h2 class="title-center">latest news</h2>
+        <div class="article-body clearfix">
+          <article class="article">
+            <img src="https://detector.media/doc/images/news/archive/2013/98412/ArticleImage_98412.jpg" alt="" class="article-img">
+            <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum
+              laboriosam
+              quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
+            <button class="button">Read More</button>
+          </article>
+          <article class="article">
+            <img src="https://football24.ua/resources/photos/news/660x364_DIR/201802/436816.jpg?201802082059" alt=""
+              class="article-img">
+            <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum
+              laboriosam
+              quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
+            <button class="button">Read More</button>
+          </article>
+          <article class="article">
+            <img src="https://static.ukrinform.com/photos/2018_11/thumb_files/630_360_1541661516-941.jpg" alt="" class="article-img">
+            <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
+            <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum
+              laboriosam
+              quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
+            <button class="button">Read More</button>
+          </article>
+        </div>
+      </section>
 
     </main>
 
