--- a/HTML/Module-5/Modul5Hw5.html
+++ b/HTML/Module-5/Modul5Hw5.html
@@ -11,92 +11,110 @@
 </head>
 
 <body>
-  <div class="wrapper">
-    <header class="header clearfix">
-      <h2 class="title">
-        <span class="colortext">M</span>art
-      </h2>
-      <ul class="menu clearfix">
-        <li class="menu-item"><a href="" class="menu-link">home</a></li>
-        <li class="menu-item"><a href="" class="menu-link">about us</a></li>
-        <li class="menu-item"><a href="" class="menu-link">page</a></li>
-        <li class="menu-item"><a href="" class="menu-link">shop</a></li>
-        <li class="menu-item"><a href="" class="menu-link">blog</a></li>
-        <li class="menu-item"><a href="" class="menu-link">contact us</a></li>
-      </ul>
-    </header>
-    <main>
-      <div class="fon">
-        <div class="title-center">
+  <div class="wrapper-header">
+    <div class="container">
+      <header class="header clearfix">
+        <h2 class="title">
+          <span class="colortext">M</span>art
+        </h2>
+        <ul class="menu clearfix">
+          <li class="menu-item"><a href="" class="menu-link">home</a></li>
+          <li class="menu-item"><a href="" class="menu-link">about us</a></li>
+          <li class="menu-item"><a href="" class="menu-link">page</a></li>
+          <li class="menu-item"><a href="" class="menu-link">shop</a></li>
+          <li class="menu-item"><a href="" class="menu-link">blog</a></li>
+          <li class="menu-item"><a href="" class="menu-link">contact us</a></li>
+        </ul>
+      </header>
+    </div>
+  </div>
+  <main>
+    <div class="wrapper-slider">
+      <div class="conteiner">
+        <section class="section-slider">
           <h1 class="main-title">Affordable paris tours</h1>
           <h2 class="tours">city tours / tour tickets / tour guides</h2>
-        </div>
+        </section>
       </div>
-      <section>
-        <h2 class="new-collection">new collection</h2>
-
-        <div class="body-figure clearfix">
-          <figure class="figure">
-            <img src="https://static.topsecret.pl/ua/public/foto/full/SPO3843BI_0.jpg#KOLOR_5" alt="" class="gallery-img">
-            <figcaption class="text clearfix">
-              <p class="worlds">blue tshirt</p>
-              <p class="price">$26</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-heart"></a>
-              <a href="#" class="icon icon-shuffle"></a>
-              <a href="#" class="icon icon-time"></a>
-
-              <a href="#" class="icon icon-cart">add to cart</a>
-            </div>
-          </figure>
-          <figure class="figure">
-            <img src="https://pix.bonprix.pl/imgc/0/0/1/8/3/0/6/9/8/1/_640/18306981/futbolka-s-karmanom.jpg" alt=""
-              class="gallery-img">
-            <figcaption class="text clearfix">
-              <p class="worlds">woman shirt</p>
-              <p class="price">$31</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-heart"></a>
-              <a href="#" class="icon icon-shuffle"></a>
-              <a href="#" class="icon icon-time"></a>
-              <a href="#" class="icon icon-cart">add to cart</a>
-            </div>
-          </figure>
-          <figure class="figure">
-            <img src="https://static.topsecret.pl/ua/public/foto/full/SPO3780CE_1.jpg#KOLOR_6" alt="" class="gallery-img">
-            <figcaption class="text clearfix">
-              <p class="worlds">yellow tshirt</p>
-              <p class="price">$21</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-heart"></a>
-              <a href="#" class="icon icon-shuffle"></a>
-              <a href="#" class="icon icon-time"></a>
-              <a href="#" class="icon icon-cart">add to cart</a>
-            </div>
-          </figure>
-          <figure class="figure">
-            <img src="https://pix.bonprix.pl/imgc/0/0/1/7/2/8/0/0/1/1/_640/17280011/bluzka-stretch-s-korotkim-rukavom.jpg"
-              alt="" class="gallery-img">
-            <figcaption class="text clearfix">
-              <p class="worlds">cool lingerie</p>
-              <p class="price">$56</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-heart"></a>
-              <a href="#" class="icon icon-shuffle"></a>
-              <a href="#" class="icon icon-time"></a>
-              <a href="#" class="icon icon-cart">add to cart</a>
-            </div>
-          </figure>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <h3 class="footer">All Rights Reserved &copy Dokan / Designed <span class="colortext">ThemenGraph</span></h3>
-    </footer>
+    </div>
+    <div class="wrapper-collection">
+      <div class="container">
+        <section class="section-collection">
+          <h2 class="new-collection">new collection</h2>
+          <div class="body-figure">
+            <figure class="figure">
+              <img src="https://static.topsecret.pl/ua/public/foto/full/SPO3843BI_0.jpg#KOLOR_5" alt="" class="gallery-img">
+              <figcaption class="text clearfix">
+                <p class="worlds">blue tshirt</p>
+                <p class="price">$26</p>
+              </figcaption>
+              <div class="figure-socials">
+                <div class="figure-socials-icon">
+                  <a href="#" class="icon icon-heart"></a>
+                  <a href="#" class="icon icon-shuffle"></a>
+                  <a href="#" class="icon icon-time"></a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                </div>
+              </div>
+            </figure>
+            <figure class="figure">
+              <img src="https://pix.bonprix.pl/imgc/0/0/1/8/3/0/6/9/8/1/_640/18306981/futbolka-s-karmanom.jpg" alt=""
+                class="gallery-img">
+              <figcaption class="text clearfix">
+                <p class="worlds">woman shirt</p>
+                <p class="price">$31</p>
+              </figcaption>
+              <div class="figure-socials">
+                <div class="figure-socials-icon">
+                  <a href="#" class="icon icon-heart"></a>
+                  <a href="#" class="icon icon-shuffle"></a>
+                  <a href="#" class="icon icon-time"></a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                </div>
+              </div>
+            </figure>
+            <figure class="figure">
+              <img src="https://static.topsecret.pl/ua/public/foto/full/SPO3780CE_1.jpg#KOLOR_6" alt="" class="gallery-img">
+              <figcaption class="text clearfix">
+                <p class="worlds">yellow tshirt</p>
+                <p class="price">$21</p>
+              </figcaption>
+              <div class="figure-socials">
+                <div class="figure-socials-icon">
+                  <a href="#" class="icon icon-heart"></a>
+                  <a href="#" class="icon icon-shuffle"></a>
+                  <a href="#" class="icon icon-time"></a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                </div>
+              </div>
+            </figure>
+            <figure class="figure">
+              <img src="https://pix.bonprix.pl/imgc/0/0/1/7/2/8/0/0/1/1/_640/17280011/bluzka-stretch-s-korotkim-rukavom.jpg"
+                alt="" class="gallery-img">
+              <figcaption class="text clearfix">
+                <p class="worlds">cool lingerie</p>
+                <p class="price">$56</p>
+              </figcaption>
+              <div class="figure-socials">
+                <div class="figure-socials-icon">
+                  <a href="#" class="icon icon-heart"></a>
+                  <a href="#" class="icon icon-shuffle"></a>
+                  <a href="#" class="icon icon-time"></a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                </div>
+              </div>
+            </figure>
+          </div>
+        </section>
+      </div>
+    </div>
+  </main>
+  <div class="wrapper-footer">
+    <div class="container">
+      <footer>
+        <h3 class="footer">All Rights Reserved &copy Dokan | Designed <span class="colortext">ThemenGraph</span></h3>
+      </footer>
+    </div>
   </div>
 </body>
 
