--- a/HTML/Module-5/Modul5Hw5.html
+++ b/HTML/Module-5/Modul5Hw5.html
@@ -53,7 +53,7 @@
                   <a href="#" class="icon icon-heart"></a>
                   <a href="#" class="icon icon-shuffle"></a>
                   <a href="#" class="icon icon-time"></a>
-                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="./icons/cart-icon.png" alt="">add to cart</a>
                 </div>
               </div>
             </figure>
@@ -69,7 +69,7 @@
                   <a href="#" class="icon icon-heart"></a>
                   <a href="#" class="icon icon-shuffle"></a>
                   <a href="#" class="icon icon-time"></a>
-                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="./icons/cart-icon.png" alt="">add to cart</a>
                 </div>
               </div>
             </figure>
@@ -84,7 +84,7 @@
                   <a href="#" class="icon icon-heart"></a>
                   <a href="#" class="icon icon-shuffle"></a>
                   <a href="#" class="icon icon-time"></a>
-                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="./icons/cart-icon.png" alt="">add to cart</a>
                 </div>
               </div>
             </figure>
@@ -100,7 +100,7 @@
                   <a href="#" class="icon icon-heart"></a>
                   <a href="#" class="icon icon-shuffle"></a>
                   <a href="#" class="icon icon-time"></a>
-                  <a href="#" class="icon icon-cart"><img class="img-icon" src="../icons/cart-icon.png" alt="">add to cart</a>
+                  <a href="#" class="icon icon-cart"><img class="img-icon" src="./icons/cart-icon.png" alt="">add to cart</a>
                 </div>
               </div>
             </figure>
