--- a/HTML/practics-2/index.html
+++ b/HTML/practics-2/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-    <title>Flex</title>
-    <link rel="stylesheet" href="css/styles.css">
+  <title>Flex</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-<body>
-  <ul class="flex-container">
-    <li class="flex-child"><a href="">1</a></li>
-    <li class="flex-child"><a href="">2</a></li>
-    <li class="flex-child"><a href="">3</a></li>
-    <li class="flex-child"><a href="">4</a></li>
-  </ul>
+
+<body class="page">
+  <div class="wrapper">
+   
+    
+  </div>
 </body>
+
 </html>
