--- a/HTML/practics/index.html
+++ b/HTML/practics/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
   <title>Gallery</title>
+  <link rel="stylesheet" href="css/vars.css">
 </head>
 
 <body>
@@ -18,12 +19,20 @@
         <li class="menu-item"><a href="" class="menu-link">new</a></li>
       </ul>
     </header>
+    <div class="promo">
+      <article class="promo-article">
+        <h1 class="promo-title">Welcome to our family</h1>
+        <p class="promo-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati eum iure ullam fuga iste error est itaque impedit reprehenderit in!</p>
+        <button class="promo-btn">view more</button>
+        <button class="promo-btn">video tour</button>
+      </article>
+    </div>
     <main>
-      <div class="section-clearfix">
-        <div class="body-article section clearfix">
+      <div class="section">
+        <div class="body-article section">
           <h2 class="section-title">About</h2>
           <div class="section-body">
-            <article class="article clearfix">
+            <article class="article">
               <img src="https://detector.media/doc/images/news/archive/2013/98412/ArticleImage_98412.jpg" alt="" class="article-img">
               <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
               <p class="line-third"></p>
@@ -32,7 +41,7 @@
                 quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
               <button class="button">Read More</button>
             </article>
-            <article class="article clearfix">
+            <article class="article">
               <img src="https://football24.ua/resources/photos/news/660x364_DIR/201802/436816.jpg?201802082059" alt=""
                 class="article-img">
               <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
@@ -42,7 +51,7 @@
                 quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
               <button class="button">Read More</button>
             </article>
-            <article class="article clearfix">
+            <article class="article">
               <img src="https://static.ukrinform.com/photos/2018_11/thumb_files/630_360_1541661516-941.jpg" alt=""
                 class="article-img">
               <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
@@ -56,7 +65,9 @@
         </div>
         <div class="body-figure section">
           <h2 class="section-title">Future products</h2>
-          <figure class="figure clearfix">
+          <div class="section-body">
+            <div class="all-figure">
+          <figure class="figure">
             <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
             <figcaption class="text">
               <p class="worlds">blue tshirt</p>
@@ -68,7 +79,7 @@
               <a href="#" class="icon icon-twitter"></a>
             </div>
           </figure>
-          <figure class="figure clearfix">
+          <figure class="figure">
             <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
             <figcaption class="text">
               <p class="worlds">blue tshirt</p>
@@ -80,9 +91,9 @@
               <a href="#" class="icon icon-twitter"></a>
             </div>
           </figure>
-          <figure class="figure clearfix">
+          <figure class="figure">
             <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
-            <figcaption class="text clearfix">
+            <figcaption class="text">
               <p class="worlds">blue tshirt</p>
               <p class="price">$26</p>
             </figcaption>
@@ -92,11 +103,21 @@
               <a href="#" class="icon icon-twitter"></a>
             </div>
           </figure>
+        </div>
+        </div>
           <div><a href="#" class="gallery-button">Button</a>
           </div>
 
         </div>
     </main>
+    <footer class="page-footer">
+      <div class="footer-socials">
+        <a href="#" class="footer-icon bg-001_facebook"></a>
+        <a href="#" class="footer-icon bg-004_twitter_social_outlined_logo"></a>
+        <a href="#" class="footer-icon bg-005_linkedin_social_outline_logotype"></a>
+        <a href="#" class="footer-icon bg-006_google_plus"></a>
+      </div>
+    </footer>
   </div>
 </body>
 
