--- a/HTML/Module-6/Modul6Hw6.html
+++ b/HTML/Module-6/Modul6Hw6.html
@@ -36,35 +36,40 @@
                         <a href="#" class="icon bg-010_blog"></a>
                         <div class="article">
                             <h4 class="titles">web design</h4>
-                            <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque, repellendus non!</p>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque,
+                                repellendus non!</p>
                         </div>
                     </div>
                     <div class="gallery-element">
                         <a href="#" class="icon bg-009_search"></a>
                         <div class="article">
                             <h4 class="titles">creativity</h4>
-                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, et alias.</p>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, et
+                                alias.</p>
                         </div>
                     </div>
                     <div class="gallery-element">
                         <a href="#" class="icon bg-007_open_book"></a>
                         <div class="article">
                             <h4 class="titles">seo</h4>
-                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, hic pariatur.</p>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, hic
+                                pariatur.</p>
                         </div>
                     </div>
                     <div class="gallery-element">
                         <a href="#" class="icon bg-008_home"></a>
                         <div class="article">
                             <h4 class="titles">css/html</h4>
-                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam assumenda ipsa.</p>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam assumenda
+                                ipsa.</p>
                         </div>
                     </div>
                     <div class="gallery-element">
                         <a href="#" class="icon bg-012_tools_and_utensils"></a>
                         <div class="article">
                             <h4 class="titles">digital</h4>
-                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, velit eveniet!</p>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, velit
+                                eveniet!</p>
                         </div>
                     </div>
                 </div>
@@ -72,7 +77,10 @@
             <section class="section-two">
                 <h2 class="main-title">Who we are</h2>
                 <h3 class="two-title">meet our team</h3>
-                <p class="text-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores mollitia officiis, ipsam magnam ad consequuntur! Alias optio a tempore laudantium necessitatibus consequuntur, maiores modi perspiciatis id accusamus autem nostrum similique eos quod, obcaecati fugiat labore facilis illum vitae, mollitia possimus.</p>
+                <p class="text-two">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores mollitia officiis,
+                    ipsam magnam ad consequuntur! Alias optio a tempore laudantium necessitatibus consequuntur, maiores
+                    modi perspiciatis id accusamus autem nostrum similique eos quod, obcaecati fugiat labore facilis
+                    illum vitae, mollitia possimus.</p>
                 <div class="body-figure">
                     <figure class="figure">
                         <img src="./img/Layer 16.png" alt="" class="img">
@@ -82,10 +90,18 @@
                         </figcaption>
                         <div class="figure-socials">
                             <div class="figure-socials-icon">
-                                <a href="" class="icons facebook"></a>
-                                <a href="" class="icons twitter"></a>
-                                <a href="" class="icons pinterest"></a>
-                                <a href="" class="icons instagram"></a>
+                                <div class="icon-fon">
+                                    <a href="" class="icons facebook"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons twitter"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons pinterest"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons instagram"></a>
+                                </div>
                             </div>
                         </div>
                     </figure>
@@ -97,10 +113,18 @@
                         </figcaption>
                         <div class="figure-socials">
                             <div class="figure-socials-icon">
-                                <a href="" class="icons facebook"></a>
-                                <a href="" class="icons twitter"></a>
-                                <a href="" class="icons pinterest"></a>
-                                <a href="" class="icons instagram"></a>
+                                <div class="icon-fon">
+                                    <a href="" class="icons facebook"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons twitter"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons pinterest"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons instagram"></a>
+                                </div>
                             </div>
                         </div>
                     </figure>
@@ -112,10 +136,18 @@
                         </figcaption>
                         <div class="figure-socials">
                             <div class="figure-socials-icon">
-                                <a href="" class="icons facebook"></a>
-                                <a href="" class="icons twitter"></a>
-                                <a href="" class="icons pinterest"></a>
-                                <a href="" class="icons instagram"></a>
+                                <div class="icon-fon">
+                                    <a href="" class="icons facebook"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons twitter"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons pinterest"></a>
+                                </div>
+                                <div class="icon-fon">
+                                    <a href="" class="icons instagram"></a>
+                                </div>
                             </div>
                         </div>
                     </figure>
