--- a/HTML/practics/index.html
+++ b/HTML/practics/index.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/styles.css">
   <title>Gallery</title>
+  <link href="https://fonts.googleapis.com/css?family=Aladin|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="css/vars.css">
+  <link rel="stylesheet" href="css/typography.css">
 </head>
 
 <body>
   <div class="wrapper">
-    <header class="page-header">
+
+    <header class="page-header container">
       <a href="" class="logo"></a>
       <ul class="menu">
         <li class="menu-item"><a href="" class="menu-link">home</a></li>
@@ -19,16 +22,19 @@
         <li class="menu-item"><a href="" class="menu-link">new</a></li>
       </ul>
     </header>
-    <div class="promo">
-      <article class="promo-article">
-        <h1 class="promo-title">Welcome to our family</h1>
-        <p class="promo-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati eum iure ullam fuga iste error est itaque impedit reprehenderit in!</p>
-        <button class="promo-btn">view more</button>
-        <button class="promo-btn">video tour</button>
-      </article>
+    <div class="wrapper--gradient">
+      <div class="promo container">
+        <article class="promo-article">
+          <h1 class="promo-title">Welcome to our family</h1>
+          <p class="promo-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati eum iure ullam fuga
+            iste error est itaque impedit reprehenderit in!</p>
+          <button class="promo-btn">view more</button>
+          <button class="promo-btn">video tour</button>
+        </article>
+      </div>
     </div>
     <main>
-      <div class="section">
+      <div class="section container">
         <div class="body-article section">
           <h2 class="section-title">About</h2>
           <div class="section-body">
@@ -36,9 +42,12 @@
               <img src="https://detector.media/doc/images/news/archive/2013/98412/ArticleImage_98412.jpg" alt="" class="article-img">
               <h3 class="article-title">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, alias?</h3>
               <p class="line-third"></p>
-              <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet dicta esse eum
-                laboriosam
-                quisquam repellendus illo perferendis blanditiis nihil obcaecati!</p>
+              <p class="article-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim deserunt delectus,
+                aspernatur aliquam neque libero autem rerum commodi porro. Officia modi nam, ipsam ex consequatur iure
+                quibusdam voluptate. Maiores, repellat. Blanditiis, vitae facere? Maiores veritatis minus quod
+                similique dicta animi provident, error quos unde optio, modi alias dolor quam quaerat incidunt culpa
+                rem. Expedita velit at adipisci optio ipsam quibusdam debitis accusantium vitae, voluptas rerum rem
+                sint. Aspernatur, fugiat odio!</p>
               <button class="button">Read More</button>
             </article>
             <article class="article">
@@ -63,61 +72,27 @@
             </article>
           </div>
         </div>
-        <div class="body-figure section">
-          <h2 class="section-title">Future products</h2>
-          <div class="section-body">
-            <div class="all-figure">
-          <figure class="figure">
-            <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
-            <figcaption class="text">
-              <p class="worlds">blue tshirt</p>
-              <p class="price">$26</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-facebook"></a>
-              <a href="#" class="icon icon-linkedin"></a>
-              <a href="#" class="icon icon-twitter"></a>
-            </div>
-          </figure>
-          <figure class="figure">
-            <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
-            <figcaption class="text">
-              <p class="worlds">blue tshirt</p>
-              <p class="price">$26</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-facebook"></a>
-              <a href="#" class="icon icon-linkedin"></a>
-              <a href="#" class="icon icon-twitter"></a>
-            </div>
-          </figure>
-          <figure class="figure">
-            <img src="https://kedoff.net/images/product/large/jenskie-tufli-img-66.jpg" alt="" class="gallery-img">
-            <figcaption class="text">
-              <p class="worlds">blue tshirt</p>
-              <p class="price">$26</p>
-            </figcaption>
-            <div class="figure-socials">
-              <a href="#" class="icon icon-facebook"></a>
-              <a href="#" class="icon icon-linkedin"></a>
-              <a href="#" class="icon icon-twitter"></a>
-            </div>
-          </figure>
-        </div>
-        </div>
-          <div><a href="#" class="gallery-button">Button</a>
-          </div>
 
-        </div>
-    </main>
-    <footer class="page-footer">
-      <div class="footer-socials">
-        <a href="#" class="footer-icon bg-001_facebook"></a>
-        <a href="#" class="footer-icon bg-004_twitter_social_outlined_logo"></a>
-        <a href="#" class="footer-icon bg-005_linkedin_social_outline_logotype"></a>
-        <a href="#" class="footer-icon bg-006_google_plus"></a>
+
       </div>
-    </footer>
+      <div class="wrapper">
+        <section class="section container feedback">
+          <h2 class="section-title">contact us</h2>
+          <div class="section-body">
+            <article class="feedback-article">
+              <h3 class="feedback-article-title">Article title</h3>
+              <p class="feedback-article-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis sed necessitatibus nisi incidunt animi, et quibusdam velit, illo mollitia in ratione nulla magnam sapiente inventore autem excepturi architecto ipsa repellat facilis atque nihil harum. Laboriosam, consequuntur explicabo! Quae quos modi voluptatibus quidem, quisquam odio. Officia vel adipisci doloribus exercitationem necessitatibus.</p>
+            </article>
+            <form action="#" method="POST" class="feedback-form">
+              <input type="text" class="feedback-form-input" placeholder="Name" required>
+              <textarea name="name" id="" cols="" rows="8" class="feedback-form-textarea">qweqwe</textarea>
+              <button type="submit" class="feedback-form-submit button">submit</button>
+            </form>
+          </div>
+        </section>
+      </div>
+    </main>
+
   </div>
 </body>
 
