--- a/HTML/Module-7/Modul7Hw7.html
+++ b/HTML/Module-7/Modul7Hw7.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="wrapper-one">
+    <div class="wrapper-header">
         <div class="container">
             <header class="header">
                 <h2 class="title">Golden</h2>
@@ -33,65 +33,64 @@
             </header>
         </div>
     </div>
-    <main>
-        <div class="wrapper-services">
-            <div class="container">
-                <section class="section-services">
-                    <h3 class="main-title">services</h3>
-                    <p class="text-title">Proin iaculis purus consequat sem cure.</p>
-                    <div class="gallery">
-                        <div class="gallery-element">
-                            <div class="border">
-                                <a href="" class="icon icon-basket"></a>
-                            </div>
-                            <div class="article">
-                                <h4 class="titles">E-Commerce</h4>
-                                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam
-                                    error beatae iusto fugit repudiandae minima.</p>
-                            </div>
+    <div class="wrapper-main">
+        <div class="container">
+            <main class="main-services">
+                <h3 class="main-title">services</h3>
+                <p class="text-title">Proin iaculis purus consequat sem cure.</p>
+                <div class="gallery">
+                    <div class="gallery-element">
+                        <div class="border">
+                            <a href="" class="icon icon-basket"></a>
                         </div>
-                        <div class="gallery-element">
-                            <div class="border">
-                                <a href="" class="icon icon-laptop"></a>
-                            </div>
-                            <div class="article">
-                                <h4 class="titles">Responsive Web</h4>
-                                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos,
-                                    sequi nam placeat fuga beatae atque dicta?</p>
-                            </div>
-                        </div>
-                        <div class="gallery-element">
-                            <div class="border">
-                                <a href="" class="icon icon-locked"></a>
-                            </div>
-                            <div class="article">
-                                <h4 class="titles">Web Security</h4>
-                                <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla esse
-                                    inventore voluptatibus ea saepe quaerat quibusdam.</p>
-                            </div>
+                        <div class="article">
+                            <h4 class="titles">E-Commerce</h4>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur nam
+                                error beatae iusto fugit repudiandae minima.</p>
                         </div>
                     </div>
-                </section>
-            </div>
-        </div>
-        <div class="wrapper-contact-us">
-            <div class="container">
-                <section class="section-contact-us">
-                    <h3 class="main-title"><span class="colortext">contact us</span></h3>
-                    <p class="text-title">Proin iaculis purus consequat sem cure.</p>
-                    <form class="form" action="#">
-                        <div>
-                            <input class="input" type="text" name="" id="" placeholder="your name *" required>
-                            <input class="input" type="email" name="" id="" placeholder="your e-mail *" required>
-                            <input class="input" type="text" name="" id="" placeholder="subject" required>
+                    <div class="gallery-element">
+                        <div class="border">
+                            <a href="" class="icon icon-laptop"></a>
                         </div>
-                        <textarea class="textarea" name="" id="" cols="" rows="8" placeholder="your message *"></textarea>
-                        <button class="button" type="submit">send message</button>
-                    </form>
-                </section>
-            </div>
+                        <div class="article">
+                            <h4 class="titles">Responsive Web</h4>
+                            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos,
+                                sequi nam placeat fuga beatae atque dicta?</p>
+                        </div>
+                    </div>
+                    <div class="gallery-element">
+                        <div class="border">
+                            <a href="" class="icon icon-locked"></a>
+                        </div>
+                        <div class="article">
+                            <h4 class="titles">Web Security</h4>
+                            <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla esse
+                                inventore voluptatibus ea saepe quaerat quibusdam.</p>
+                        </div>
+                    </div>
+                </div>
+            </main>
         </div>
-    </main>
+    </div>
+    <div class="wrapper-footer">
+        <div class="container">
+            <footer class="footer-contact-us">
+                <h3 class="main-title"><span class="colortext">contact us</span></h3>
+                <p class="text-title">Proin iaculis purus consequat sem cure.</p>
+                <form class="form" action="#">
+                    <div>
+                        <input class="input" type="text" name="text" id="" placeholder="your name *" required>
+                        <input class="input" type="email" name="email" id="" placeholder="your e-mail *" required>
+                        <input class="input" type="text" name="subject" id="" placeholder="subject" required>
+                    </div>
+                    <textarea class="textarea" name="message" id="" cols="" rows="8" placeholder="your message *"></textarea>
+                    <button class="button" type="submit">send message</button>
+                </form>
+            </footer>
+        </div>
+    </div>
+
 </body>
 
 </html>
