--- a/HTML/Module-8/Modul8Hw8.html
+++ b/HTML/Module-8/Modul8Hw8.html
@@ -33,34 +33,42 @@
                 <h3 class="main-title">Meet a partner for your best holiday</h3>
                 <div class="gallery">
                     <div class="gallery-element">
-                        <img class="img" src="img/Layer 6.png" alt="">
-                        <div class="border tv">
-                            <a class="icon icon-tv" href=""></a>
+                        <div class="img-box">
+                            <img class="img" src="img/Layer 6.png" alt="">
+                            <div class="border tv">
+                                <a class="icon icon-tv" href=""></a>
+                            </div>
                         </div>
                         <h4 class="titles">Bradley Hunter</h4>
                         <p class="text">Based in Chicago. I love playing tennis and loud music.</p>
                     </div>
                     <div class="gallery-element">
-                        <img class="img" src="img/Layer 8.png" alt="">
-                        <div class="border probirca">
-                            <a class="icon icon-probirca" href=""></a>
+                        <div class="img-box">
+                            <img class="img" src="img/Layer 8.png" alt="">
+                            <div class="border probirca">
+                                <a class="icon icon-probirca" href=""></a>
+                            </div>
                         </div>
                         <h4 class="titles">Lucas Marsha</h4>
                         <p class="text">I get my inspiration from nature and objects around me. I have a passion to
                             colours, typography and skateboards.</p>
                     </div>
                     <div class="gallery-element">
-                        <img class="img" src="img/Layer 7.png" alt="">
-                        <div class="border cup">
-                            <a class="icon icon-cup" href=""></a>
+                        <div class="img-box">
+                            <img class="img" src="img/Layer 7.png" alt="">
+                            <div class="border cup">
+                                <a class="icon icon-cup" href=""></a>
+                            </div>
                         </div>
                         <h4 class="titles">Heather Walker</h4>
                         <p class="text">I'm a happy person that loves cats and climbing on mountains.</p>
                     </div>
                     <div class="gallery-element">
-                        <img class="img" src="img/Layer 10.png" alt="">
-                        <div class="border airplane">
-                            <a class="icon icon-airplane" href=""></a>
+                        <div class="img-box">
+                            <img class="img" src="img/Layer 10.png" alt="">
+                            <div class="border airplane">
+                                <a class="icon icon-airplane" href=""></a>
+                            </div>
                         </div>
                         <h4 class="titles">Bradley Hunter</h4>
                         <p class="text">Based in Chicago. I love playing tennis and loud music.</p>
@@ -70,7 +78,7 @@
             </main>
         </div>
     </div>
-    
+
 </body>
 
 </html>
