--- a/HTML/Module-10/Modul10Hw10.html
+++ b/HTML/Module-10/Modul10Hw10.html
@@ -45,7 +45,7 @@
                             <a href="#"><svg class="gallery__icon">
                                     <use href="icons/symbol-defs.svg#icon-ALARM"></use>
                                 </svg></a>
-                            <div class="gallery__article">
+                            <div class="article">
                                 <h4 class="article__titles">photography</h4>
                                 <p class="article__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, ad
                                     quas.</p>
@@ -55,7 +55,7 @@
                             <a href="#"><svg class="gallery__icon">
                                     <use href="icons/symbol-defs.svg#icon-LINE-GRAPH"></use>
                                 </svg></a>
-                            <div class="gallery__article">
+                            <div class="article">
                                 <h4 class="article__titles">web design</h4>
                                 <p class="article__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque,
                                     repellendus non!</p>
@@ -65,7 +65,7 @@
                             <a href="#"><svg class="gallery__icon">
                                     <use href="icons/symbol-defs.svg#icon-COMPUTER-_-OK"></use>
                                 </svg></a>
-                            <div class="gallery__article">
+                            <div class="article">
                                 <h4 class="article__titles">creativity</h4>
                                 <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, et
                                     alias.</p>
@@ -75,7 +75,7 @@
                             <a href="#"><svg class="gallery__icon">
                                     <use href="icons/symbol-defs.svg#icon-BOOK-2"></use>
                                 </svg></a>
-                            <div class="gallery__article">
+                            <div class="article">
                                 <h4 class="article__titles">seo</h4>
                                 <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, hic
                                     pariatur.</p>
@@ -85,7 +85,7 @@
                             <a href="#"><svg class="gallery__icon">
                                     <use href="icons/symbol-defs.svg#icon-HOME"></use>
                                 </svg></a>
-                            <div class="gallery__article">
+                            <div class="article">
                                 <h4 class="article__titles">css/html</h4>
                                 <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut ipsam
                                     assumenda
@@ -96,7 +96,7 @@
                             <a href="#"><svg class="gallery__icon">
                                     <use href="icons/symbol-defs.svg#icon-IMAGE"></use>
                                 </svg></a>
-                            <div class="gallery__article">
+                            <div class="article">
                                 <h4 class="article__titles">digital</h4>
                                 <p class="article__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, velit
                                     eveniet!</p>
@@ -122,7 +122,7 @@
                                 <p class="figcaption__profession">Graphic design</p>
                             </figcaption>
                             <div class="figure__socials">
-                                <div class="socials__icon">
+                                <div class="socials">
                                     <div class="socials__fon socials__fon--hover">
                                         <a href="" class="socials__icons socials__icons--hover"><svg class="socials__svg">
                                                 <use href="icons/socset.svg#icon-facebook"></use>
@@ -153,7 +153,7 @@
                                 <p class="figcaption__profession">Branding/UX design</p>
                             </figcaption>
                             <div class="figure__socials">
-                                <div class="socials__icon">
+                                <div class="socials">
                                     <div class="socials__fon socials__fon--hover">
                                         <a href="" class="socials__icons socials__icons--hover"><svg class="socials__svg">
                                                 <use href="icons/socset.svg#icon-facebook"></use>
@@ -184,7 +184,7 @@
                                 <p class="figcaption__profession">Developer</p>
                             </figcaption>
                             <div class="figure__socials">
-                                <div class="socials__icon">
+                                <div class="socials">
                                     <div class="socials__fon socials__fon--hover">
                                         <a href="" class="socials__icons socials__icons--hover"><svg class="socials__svg">
                                                 <use href="icons/socset.svg#icon-facebook"></use>
@@ -219,7 +219,7 @@
                 <h4 class="footer__title">&copy 2016 MoGo free PSD template by <span class="colortext">Laaqiq</span></h4>
                 <form class="footer__form" action="#">
                     <input class="form__input" type="email" name="email" id placeholder="Your Email..." required>
-                    <button class="form__button">subscribe</button>
+                    <button class="form__button">subscribe
                 </form>
                 
             </footer>
