--- a/HTML/Kursova/kursova.html
+++ b/HTML/Kursova/kursova.html
@@ -203,7 +203,7 @@
         <div class="wrapper-people">
             <div class="container">
                 <div class="people">
-                    <a href="" class="people-logo"><svg class="people-svg">
+                    <a href="" class="people-icon"><svg class="people-svg">
                             <use href="icon/Lapku.svg#lapku"></use>
                         </svg></a>
                     <p class="people-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate unde
@@ -212,13 +212,13 @@
                         quod ullam ratione inventore aut sequi! Vel tempora et quos corporis cupiditate, soluta officiis
                         accusantium quam.</p>
                     <h3 class="people-name">Jane Galadriel</h3>
-                    <p class="people-profesion">ceo tengkurep</p>
+                    <p class="people-profession">ceo tengkurep</p>
                     <div class="people-photos">
-                        <img src="" alt="" class="people-img">
-                        <img src="" alt="" class="people-img">
-                        <img src="" alt="" class="people-img">
-                        <img src="" alt="" class="people-img">
-                        <img src="" alt="" class="people-img">
+                        <img src="img/face/women.jpg" alt="" class="people-img">
+                        <img src="img/face/men.jpg" alt="" class="people-img">
+                        <img src="img/face/women big.jpg" alt="" class="people-big-img">
+                        <img src="img/face/women2.jpg" alt="" class="people-img">
+                        <img src="img/face/men2.jpg" alt="" class="people-img">
                     </div>
                 </div>
             </div>
